--- a/FragListApp/app/src/main/res/layout/app_bar_main.xml
+++ b/FragListApp/app/src/main/res/layout/app_bar_main.xml
@@ -26,6 +26,7 @@
     <!-- placeholder for various fragments -->
     <LinearLayout
         android:id="@+id/fragment_container"
+        android:layout_marginTop="?actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
