--- a/FragListApp/app/src/main/res/layout/item_frag.xml
+++ b/FragListApp/app/src/main/res/layout/item_frag.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:gravity="center_vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
->
+    android:stretchColumns="2"
+    android:weightSum="100" >
 
-    <EditText
-        android:id="@+id/item_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="53dp"
-        android:layout_marginTop="209dp"
-        android:text="enter item"
-        android:textColor="#2a37c2"
-        android:textSize="@dimen/abc_text_size_large_material"
-        android:textStyle="bold" />
+    <TableRow android:gravity="center_horizontal">
+        <TextView android:text="Name:" android:textSize="30sp"/>
 
-    <Button
-        android:id="@+id/add_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="234dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="56dp"
-        android:text="@string/add" />
+        <EditText
+            android:id="@+id/item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="task name"
+            android:textSize="25sp" />
+    </TableRow>
 
+    <TableRow android:gravity="center_horizontal">
+        <TextView android:text="Due:" android:textSize="30sp"/>
+        <TextView android:id="@+id/task_date" android:hint="select date" android:textSize="25sp"/>
+    </TableRow>
 
-</RelativeLayout>
+    <TableRow android:gravity="center_horizontal">
+        <TextView android:text="Category:" android:textSize="30sp"/>
+        <EditText
+            android:id="@+id/task_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="task name"
+            android:textSize="25sp" />
+    </TableRow>
+
+    <TableRow android:gravity="center_horizontal">
+        <Button
+            android:id="@+id/cancel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel" />
+        <Button
+            android:id="@+id/add_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save" />
+    </TableRow>
+
+</TableLayout>
