--- a/FragListApp/app/src/main/res/layout/item_frag.xml
+++ b/FragListApp/app/src/main/res/layout/item_frag.xml
@@ -13,9 +13,10 @@
 
         <EditText
             android:id="@+id/item_text"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:hint="task name"
+            android:singleLine="true"
             android:textSize="25sp" />
     </TableRow>
 
@@ -28,9 +29,11 @@
         <TextView android:text="Category:" android:textSize="30sp"/>
         <EditText
             android:id="@+id/task_category"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:hint="task name"
+            android:hint="updated?"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
             android:textSize="25sp" />
     </TableRow>
 
