tried to change title with changing fragments
** APP MIGHT CRASH

--- a/FragListApp/app/src/main/res/layout/app_bar_main.xml
+++ b/FragListApp/app/src/main/res/layout/app_bar_main.xml
@@ -10,10 +10,12 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
