--- a/FragListApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FragListApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Fragments">
+    <item android:title="Task Me">
         <menu>
             <item
                 android:id="@+id/item_frag"
