--- a/FragListApp/app/src/main/res/layout/item_frag.xml
+++ b/FragListApp/app/src/main/res/layout/item_frag.xml
@@ -31,7 +31,7 @@
             android:id="@+id/task_category"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:hint="updated?"
+            android:hint="category"
             android:singleLine="true"
             android:imeOptions="actionDone"
             android:textSize="25sp" />
