--- a/FragListApp/app/src/main/res/layout/fragment_expanded_task_frag.xml
+++ b/FragListApp/app/src/main/res/layout/fragment_expanded_task_frag.xml
@@ -9,7 +9,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TableRow android:gravity="center_horizontal">
-        <TextView android:id="@+id/task_name" android:text="Task Name" android:textSize="30sp"/>
+        <TextView android:id="@+id/expanded_task_name" android:text="Task Name" android:textSize="30sp"/>
     </TableRow>
     <TableRow android:gravity="center_horizontal">
 
@@ -19,7 +19,7 @@
             android:text="Due:"
             android:textSize="30sp" />
         <TextView
-            android:id="@+id/task_date"
+            android:id="@+id/expanded_due_date"
             android:text="mm/dd/yy"
             android:textSize="25sp"/>
     </TableRow>
@@ -27,7 +27,7 @@
         <Button android:id="@+id/mark_complete_btn" android:text="Mark Complete"/>
     </TableRow>
     <TableRow android:gravity="center_horizontal">
-        <TextView android:id="@+id/task_category" android:text="Category" android:textAlignment="center" android:textSize="30sp"/>
+        <TextView android:id="@+id/expanded_task_category" android:text="Category" android:textAlignment="center" android:textSize="30sp"/>
     </TableRow>
 
 </TableLayout>
