--- a/FragListApp/app/src/main/res/layout/app_bar_main.xml
+++ b/FragListApp/app/src/main/res/layout/app_bar_main.xml
@@ -30,7 +30,7 @@
         android:id="@+id/fragment_container"
         android:layout_marginTop="?actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|center_vertical"
         android:orientation="vertical">
 
