--- a/FragListApp/app/src/main/res/layout/fragment_expanded_task_frag.xml
+++ b/FragListApp/app/src/main/res/layout/fragment_expanded_task_frag.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".expandedTaskFrag"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@android:color/transparent">
 
     <!-- TODO: Update blank fragment layout -->
     <TableRow android:gravity="center_horizontal">
