--- a/FragListApp/app/src/main/res/values/colors.xml
+++ b/FragListApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#07C6C6</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="statsColor">#6EDD23</color>
+    <color name="taskUpdateColor">#C5BC00</color>
+    <color name="completeColor">#FDA244</color>
+    <color name="colorAccent">#D3B4F4</color>
 </resources>
